LPS-154879 Avoid extra margin on edit object sidepanel

--- a/modules/apps/object/object-web/src/main/resources/META-INF/resources/js/components/ObjectFieldFormBase.scss
+++ b/modules/apps/object/object-web/src/main/resources/META-INF/resources/js/components/ObjectFieldFormBase.scss
@@ -10,9 +10,13 @@
 		color: $secondary-l1;
 	}
 
-	&-toggle-container {
-		display: grid;
-		gap: 1.56rem;
-		margin-bottom: 1.5rem;
+	&-form-group-toggles {
+		display: contents;
+
+		.modal & {
+			display: grid;
+			gap: 1.56rem;
+			margin-bottom: 1.5rem;
+		}
 	}
 }
